
[TestFormattingSnapshots/changelog_preview - 1]
### Major Changes

- Breaking API change

### Minor Changes

- Add OAuth2 support ([#123](https://github.com/org/repo/pull/123) by @alice)
    Includes Google + GitHub providers

### Patch Changes

- Fix memory leak


---

[TestFormattingSnapshots/snapshot_summary - 1]
### Major Changes

- Breaking API change

### Minor Changes

- Add OAuth2 support [#123](https://github.com/org/repo/pull/123) by @alice
  Includes Google + GitHub providers

### Patch Changes

- Fix memory leak

/-/-/-/
**This is a pre-release snapshot for testing purposes.**

---
